# pdf417-py

./: .env  .flake8  .gitignore  .travis.yml  .vermin  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.py.old
.github/workflows/: test.yaml
pdf417/: __init__.py  codes.py  compaction.py  data.py  encoders.py  encoding.py  error_correction.py  rendering.py  util.py
pdf417gen/: __init__.py  codes.py  compaction.py  console.py  data.py  encoding.py  error_correction.py  rendering.py  types.py  util.py
pdf417gen/compaction/: __init__.py  byte.py  numeric.py  optimizations.py  text.py
tests/: performance.py  test_compaction.py  test_console.py  test_encode.py  test_encoders.py  test_error_correction.py  test_renderers.py
tests/integration/: conftest.py  test_integration.py  testing_utils.py
