[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf417gen"
version = "0.7.1"
authors = [
  { name="Ivan Habunek", email="ivan@habunek.com" },
]
description = "PDF417 2D barcode generator"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
# packages=['pdf417gen', 'pdf417gen.compaction']

[project.urls]
"Homepage" = "https://github.com/ihabunek/pdf417-py"
"Bug Tracker" = "https://github.com/ihabunek/pdf417-py/issues"
